--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.3",
     "react-player": "^2.12.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.10.0",
