--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.5.0",
     "axios": "^1.4.0",
+    "bootstrap": "^5.2.3",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.3",
     "react-player": "^2.12.0",
